--- a/compose-assignment-2/docker-compose.yml
+++ b/compose-assignment-2/docker-compose.yml
@@ -1,1 +1,19 @@
 # create your drupal and postgres config here, based off the last assignment
+version: "2"
+
+services:
+  custom-drupal:
+    build: .
+    ports:
+      - "8080:80"
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: drupaldb
+      POSTGRES_USER: hly
+      POSTGRES_PASSWORD: pass
+    volumes:
+      - "drupal-data:/var/lib/postgresql/data"
+
+volumes:
+  drupal-data:
